--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster');
 html, body, .root {
   height: 100%;
 }
@@ -12,13 +13,18 @@ body, .app {
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  /* CSS Gradient from https://uiGradients.com */
+  background: #fc4a1a; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #fc4a1a, #f7b733); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #fc4a1a, #f7b733); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: center;
 }
 .list-books-title h1 {
   font-weight: 400;
   margin: 0;
+  font-size: 40px;
   color: white;
+  font-family: 'Lobster', cursive;
 }
 
 .list-books-content {
@@ -146,14 +152,28 @@ body, .app {
   bottom: -10px;
   width: 40px;
   height: 40px;
-  border-radius: 50%;
-  background: #60ac5d;
+  border-radius: 25%;
+  background: #fc4a1a;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+.book-shelf-changer:hover {
+  background: #f7b733;
+  background-image: url('./icons/arrow-drop-down.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  -moz-transition: all .51s;
+  -o-transition: all .51s;
+  -webkit-transition: all .51s;
+  transition: all .51s;
+  border-radius: 50%;
+}
+
 .book-shelf-changer select {
   width: 100%;
   height: 100%;
