--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body, .app {
   background: grey; /* fallback for old browsers */
   text-align: center;
   height: 300px;
-  background-image: url('images/title-bg2.jpg');
+  background-image: url('images/title-bg.jpg');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
